<resources>
    <string name="app_name">Менеджер трат</string>
    <string name="sum">Сумма</string>
    <string name="description">Примечание</string>
    <string name="add_transaction">Добавить операцию</string>
    <string name="save_changes">Сохранить изменения</string>
    <string name="last_transaction">Последние операции</string>
    <string name="title">Описание</string>
    <string name="transaction_saved">Операция сохранена</string>
    <string name="spending">Расходы</string>
    <string name="profit">Доходы</string>
    <string name="transfer_between_account">Перевод между счетами</string>
    <string name="search">Поиск</string>
    <string name="settings">Настройки</string>
    <string name="about">О приложении</string>
    <string name="analytics">Аналитика</string>
    <string name="categories">Категории</string>
    <string name="category">Категория</string>
    <string name="total_balance">Общий баланс</string>
    <string name="total_profit_for_last_month">Доход за этот месяц</string>
    <string name="total_spent_for_last_month">Расходы за этот месяц</string>
    <string name="cinema_and_theaters">Кино и театр</string>
    <string name="home_rent">Аренда жилья</string>
    <string name="books">Книги и журналы</string>
    <string name="select_category">Выбор категории</string>
    <string name="save">Сохранить</string>
    <string name="select_color">Выбрать цвет</string>
    <string name="add_category">Добавить категорию</string>
    <string name="category_color">Цвет категории</string>
    <string name="category_color_subtitle_text">Будет использовать как фон категории</string>
    <string name="category_title">Название категории</string>
    <string name="category_saved">Категория сохранена</string>
    <string name="select_icon_color">Выберете цвет изображения</string>
    <string name="category_icon">Изображение категории</string>
    <string name="category_icon_subtitle_text">Будет использовать как изображение категории</string>
    <string name="category_base_type_title_text">Базовый тип операции в категории</string>
    <string name="add_icon_to_category">Выбрать изображение</string>
    <string name="light">Светлый</string>
    <string name="dark">Тёмный</string>
    <string name="transaction_date">Дата операции</string>
    <string name="transaction_date_subtitle_text">Сегодня, 21 декабря 2018</string>
    <string name="today">Сегодня</string>
    <string name="transaction_save_as_template_title">Сохранить как шаблон</string>
    <string name="transaction_save_as_template_subtitle">Шаблоны ускоряют ввод регулярных операций</string>
    <string name="templates">Шаблоны</string>
    <string name="edit_transaction">Изменить операцию</string>
    <string name="description_not_exist">Описание отсутствует</string>
    <string name="transaction_type">Тип операции</string>
    <string name="transaction_empty">Операции не найдены</string>
    <string name="template_not_found">Шаблоны не найдены</string>
    <string name="category_not_found">Категории не найдены</string>
    <string name="transactions">Операции</string>
    <string name="base_account">Базовый аккаунт</string>
</resources>
