<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/background">
    
    <include layout="@layout/view_toolbar"/>
    
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            
            <android.support.design.widget.TextInputLayout
                style="@style/Widget.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:hint="@string/category_title">
                
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/category_title_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    tools:text="Зарплата"/>
            
            </android.support.design.widget.TextInputLayout>
            
            <TextView style="@style/Text.ListItem.Primary"
                      android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/category_base_type_title_text"
                      android:layout_marginStart="16dp"/>
            
            <HorizontalScrollView android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:paddingStart="16dp"
                                  android:paddingEnd="16dp">
                
                <android.support.design.chip.ChipGroup
                    android:id="@+id/category_operation_type_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    app:singleLine="true"
                    app:singleSelection="true">
                    
                    <android.support.design.chip.Chip
                        android:id="@+id/spending"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        app:chipBackgroundColor="@color/chip_spent_background_color_selector"
                        android:text="@string/spending"/>
                    
                    <android.support.design.chip.Chip
                        android:id="@+id/profit"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:chipBackgroundColor="@color/chip_profit_background_color_selector"
                        android:text="@string/profit"/>
                    
                    <android.support.design.chip.Chip
                        android:id="@+id/transfer"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="32dp"
                        android:visibility="gone"
                        app:chipBackgroundColor="@color/chip_transfer_background_color_selector"
                        android:text="@string/transfer_between_account"/>
                
                </android.support.design.chip.ChipGroup>
            
            </HorizontalScrollView>
            
            <include
                android:id="@+id/color_selector_field"
                layout="@layout/view_category_color_item"/>
            
            <include
                android:id="@+id/icon_selector_field"
                layout="@layout/view_category_icon_item"/>
        
        </LinearLayout>
    
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>