<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:background="@color/background">
    
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            
            <android.support.design.widget.TextInputLayout
                style="@style/Widget.Shrine.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="12dp"
                android:hint="@string/sum">
                
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/transition_sum_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    tools:text="250"/>
            
            </android.support.design.widget.TextInputLayout>
            
            <android.support.design.chip.ChipGroup
                android:id="@+id/operation_type_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:singleSelection="true">
                
                <android.support.design.chip.Chip
                    android:id="@+id/spending"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    app:chipBackgroundColor="@color/chip_spent_background_color_selector"
                    android:text="@string/spending"/>
                
                <android.support.design.chip.Chip
                    android:id="@+id/profit"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipBackgroundColor="@color/chip_profit_background_color_selector"
                    android:text="@string/profit"/>
    
                <android.support.design.chip.Chip
                    android:id="@+id/transfer"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipBackgroundColor="@color/chip_transfer_background_color_selector"
                    android:text="@string/transfer"/>
            
            </android.support.design.chip.ChipGroup>
            
            <android.support.design.widget.TextInputLayout
                style="@style/Widget.Shrine.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:hint="@string/title">
                
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/transition_title_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    tools:text="Билет в кино"/>
            
            </android.support.design.widget.TextInputLayout>
            
            <android.support.design.widget.TextInputLayout
                style="@style/Widget.Shrine.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:hint="@string/description">
                
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/transition_description_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    tools:text="В к-р Большой, на Мстители: Война бесконечности"/>
            
            </android.support.design.widget.TextInputLayout>
        
        </LinearLayout>
    
    </android.support.v4.widget.NestedScrollView>
    
    <include layout="@layout/view_toolbar"/>

</android.support.design.widget.CoordinatorLayout>